// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VerifyMessage should render 1`] = `
<DocumentFragment>
  <div
    class="fixed inset-0 z-50 w-full h-full overflow-y-scroll flex items-center justify-center"
  >
    <div
      class="fixed z-50 w-full h-full bg-black opacity-50"
      data-testid="modal__overlay"
    />
    <div
      class="sc-fznyAO ioJhAT absolute left-0 right-0 z-50 flex flex-col p-10 mx-auto mb-24 overflow-hidden rounded-xl bg-theme-background "
      data-testid="modal__inner"
    >
      <div
        class="absolute top-0 right-0 z-50 mt-5 mr-5 rounded bg-theme-primary-100 hover:text-white hover:bg-theme-neutral-900"
      >
        <button
          class="sc-AxhCb gcoSL w-11 h-11"
          color="primary"
          data-testid="modal__close-btn"
          type="button"
        >
          <div
            class="sc-AxjAm hSsKJo"
            height="14"
            width="14"
          >
            <svg>
              cross-slim.svg
            </svg>
          </div>
        </button>
      </div>
      <div
        class="relative"
      >
        <h2
          class="mb-0 text-3xl font-bold"
        >
          Verify Message
        </h2>
        <div
          class="flex-1"
        >
          <div
            class="mt-1 text-theme-neutral-dark"
          >
            To make sure that you are the owner of this wallet, you can pass the check. and this more text.
          </div>
          <div
            class="mt-8"
          >
            <div
              class="flex flex-col pb-6 border-b border-dashed border-theme-neutral-light"
            >
              <div
                class="flex flex-col"
              >
                <div
                  class="flex items-center justify-between"
                >
                  <div
                    class="text-lg font-semibold"
                  >
                    Verify JSON
                  </div>
                  <label
                    class="flex"
                  >
                    <input
                      checked=""
                      class="Toggle__Input-qyyifx-0 bXkHfF"
                      data-testid="verify-address__toggle"
                      type="checkbox"
                    />
                    <div
                      class="Toggle__Handle-qyyifx-1 jXkMFJ"
                    >
                      <span
                        class="Toggle__HandleInner-qyyifx-2 chnbkf"
                      />
                    </div>
                  </label>
                </div>
                <div
                  class="pr-12 mt-1 text-sm text-theme-neutral"
                >
                  You can verify only text using a JSON public key
                </div>
              </div>
            </div>
            <form
              class="space-y-8"
              data-testid="Form"
              id="VerifyMessage__form"
            >
              <div
                class="mt-8"
              >
                <div
                  class="flex rounded-lg overflow-hidden bg-theme-warning"
                >
                  <div
                    class="sc-AxiKw cPQbnD flex items-center justify-center text-theme-warning bg-theme-warning-200"
                  >
                    <div
                      class="sc-AxjAm bIZXgI"
                      height="30"
                      width="30"
                    >
                      <svg>
                        alert-default.svg
                      </svg>
                    </div>
                  </div>
                  <div
                    class="sc-AxirZ evPsEn flex-1 bg-theme-warning-100 space-y-2"
                  >
                    <div
                      class="text-sm"
                    >
                      <span
                        class="text-sm font-medium"
                      >
                        Format(JSON): { "signatory": "...", "signature": "...", "message": "..."}
                      </span>
                    </div>
                  </div>
                </div>
                <div
                  class="mt-8"
                >
                  <fieldset
                    class="sc-AxhUy dJlYTe flex flex-col space-y-2"
                  >
                    <label
                      class="flex inline-block mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-neutral-dark"
                      data-testid="FormLabel"
                      for="signed-message-content"
                    >
                      Signed message content
                      <div
                        class="w-1 h-1 mt-1 ml-1 rounded-full bg-theme-danger-400"
                        data-testid="FormLabel__required"
                      />
                    </label>
                    <input
                      class="sc-AxgMl jRvGoE overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-neutral-300 text-theme-neutral-900 transition-colors duration-200 px-4 py-3 "
                      data-testid="VerifyMessage_message-content"
                      name="signed-message-content"
                      type="text"
                      value=""
                    />
                  </fieldset>
                </div>
              </div>
              <div
                class="flex justify-end space-x-3"
              >
                <button
                  class="sc-AxhCb hPLjLy"
                  color="primary"
                  data-testid="VerifyMessage__cancel"
                  type="button"
                >
                  Cancel
                </button>
                <button
                  class="sc-AxhCb khNOPs"
                  color="primary"
                  data-testid="VerifyMessage__submit"
                  type="submit"
                >
                  Verify
                </button>
              </div>
            </form>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`VerifyMessage should render the non verify address content 1`] = `
<DocumentFragment>
  <div
    class="fixed inset-0 z-50 w-full h-full overflow-y-scroll flex items-center justify-center"
  >
    <div
      class="fixed z-50 w-full h-full bg-black opacity-50"
      data-testid="modal__overlay"
    />
    <div
      class="sc-fznyAO ioJhAT absolute left-0 right-0 z-50 flex flex-col p-10 mx-auto mb-24 overflow-hidden rounded-xl bg-theme-background "
      data-testid="modal__inner"
    >
      <div
        class="absolute top-0 right-0 z-50 mt-5 mr-5 rounded bg-theme-primary-100 hover:text-white hover:bg-theme-neutral-900"
      >
        <button
          class="sc-AxhCb gcoSL w-11 h-11"
          color="primary"
          data-testid="modal__close-btn"
          type="button"
        >
          <div
            class="sc-AxjAm hSsKJo"
            height="14"
            width="14"
          >
            <svg>
              cross-slim.svg
            </svg>
          </div>
        </button>
      </div>
      <div
        class="relative"
      >
        <h2
          class="mb-0 text-3xl font-bold"
        >
          Verify Message
        </h2>
        <div
          class="flex-1"
        >
          <div
            class="mt-1 text-theme-neutral-dark"
          >
            To make sure that you are the owner of this wallet, you can pass the check. and this more text.
          </div>
          <div
            class="mt-8"
          >
            <div
              class="flex flex-col pb-6 border-b border-dashed border-theme-neutral-light"
            >
              <div
                class="flex flex-col"
              >
                <div
                  class="flex items-center justify-between"
                >
                  <div
                    class="text-lg font-semibold"
                  >
                    Verify JSON
                  </div>
                  <label
                    class="flex"
                  >
                    <input
                      checked=""
                      class="Toggle__Input-qyyifx-0 bXkHfF"
                      data-testid="verify-address__toggle"
                      type="checkbox"
                    />
                    <div
                      class="Toggle__Handle-qyyifx-1 jXkMFJ"
                    >
                      <span
                        class="Toggle__HandleInner-qyyifx-2 chnbkf"
                      />
                    </div>
                  </label>
                </div>
                <div
                  class="pr-12 mt-1 text-sm text-theme-neutral"
                >
                  You can verify only text using a JSON public key
                </div>
              </div>
            </div>
            <form
              class="space-y-8"
              data-testid="Form"
              id="VerifyMessage__form"
            >
              <div
                data-testid="noverify-address__content"
              >
                <fieldset
                  class="sc-AxhUy dJlYTe mt-8"
                >
                  <label
                    class="flex inline-block mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-neutral-dark"
                    data-testid="FormLabel"
                    for="message"
                  >
                    Message
                    <div
                      class="w-1 h-1 mt-1 ml-1 rounded-full bg-theme-danger-400"
                      data-testid="FormLabel__required"
                    />
                  </label>
                  <input
                    class="sc-AxgMl jRvGoE overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-neutral-300 text-theme-neutral-900 transition-colors duration-200 px-4 py-3 "
                    data-testid="VerifyMessage__message-input"
                    name="message"
                    type="text"
                  />
                </fieldset>
                <fieldset
                  class="sc-AxhUy dJlYTe mt-8"
                >
                  <label
                    class="flex inline-block mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-neutral-dark"
                    data-testid="FormLabel"
                    for="signatory"
                  >
                    Public Key
                    <div
                      class="w-1 h-1 mt-1 ml-1 rounded-full bg-theme-danger-400"
                      data-testid="FormLabel__required"
                    />
                  </label>
                  <input
                    class="sc-AxgMl jRvGoE overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-neutral-300 text-theme-neutral-900 transition-colors duration-200 px-4 py-3 "
                    data-testid="VerifyMessage__signatory-input"
                    disabled=""
                    name="signatory"
                    type="text"
                    value="03600a30cb66c6f6275ead993078d691764629c4f9244e5d38fea73483f31821cc"
                  />
                </fieldset>
                <fieldset
                  class="sc-AxhUy dJlYTe mt-8"
                >
                  <label
                    class="flex inline-block mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-neutral-dark"
                    data-testid="FormLabel"
                    for="signature"
                  >
                    Signature
                    <div
                      class="w-1 h-1 mt-1 ml-1 rounded-full bg-theme-danger-400"
                      data-testid="FormLabel__required"
                    />
                  </label>
                  <input
                    class="sc-AxgMl jRvGoE overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-neutral-300 text-theme-neutral-900 transition-colors duration-200 px-4 py-3 "
                    data-testid="VerifyMessage__signature-input"
                    name="signature"
                    type="text"
                  />
                </fieldset>
              </div>
              <div
                class="flex justify-end space-x-3"
              >
                <button
                  class="sc-AxhCb hPLjLy"
                  color="primary"
                  data-testid="VerifyMessage__cancel"
                  type="button"
                >
                  Cancel
                </button>
                <button
                  class="sc-AxhCb khNOPs"
                  color="primary"
                  data-testid="VerifyMessage__submit"
                  type="submit"
                >
                  Verify
                </button>
              </div>
            </form>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
